# cgo_jna_test

./: README.md
clib/: CMakeCache.txt  CMakeLists.txt  Makefile  PetraAPILCallTest.cpp  PetraRowRef.cpp  PetraRowRef.hpp  cmake_install.cmake
run_c/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
run_go/: go.mod  main.go
run_go/rowref/: PetraAPILCallTest.h  rowref.go
run_java/jnatest/: pom.xml
run_java/jnatest/src/main/java/com/sinsiway/: App.java
run_java/jnatest/src/test/java/com/sinsiway/: AppTest.java
